# flask-browser-info

./: .gitignore  README.md  app.py  cert.pem  key.pem  pyproject.toml
templates/: index.html
