[tool.poetry]
name = "client-info-server"
version = "0.1.0"
description = ""
authors = ["Will Carpenter <willcarpenterwastaken@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
